- Issue #6624: yArg_ParseTuple with "s" format when parsing argument with   NUL: Bogus TypeError detail string.